--- a/notebooks/corpus.ipynb
+++ b/notebooks/corpus.ipynb
@@ -2,14 +2,22 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Corpus and Lexicon"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "- __author__: Evgeny A. Stepanov\n",
     "- __e-mail__: stepanov.evgeny.a@gmail.com"
@@ -17,21 +25,33 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "Dan Jurafsky and James H. Martin's __Speech and Language Processing__ ([3rd ed. draft](https://web.stanford.edu/~jurafsky/slp3/)) is advised for reading. "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "- Section *Corpora and Counting* covers some concepts of *Chapter 2: \"Regular Expressions, Text Normalization, Edit Distance\"*."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "__Requirements__\n",
     "\n",
@@ -53,7 +73,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "__Alternative Corpora__\n",
     "\n",
@@ -67,14 +91,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## 1. Corpora and Counting"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### 1.1. Corpus\n",
     "\n",
@@ -95,7 +127,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### NL2SparQL4NLU\n",
     "\n",
@@ -114,7 +150,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### Exercise\n",
     "\n",
@@ -127,7 +167,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [],
    "source": [
     "trn='NL2SparQL4NLU/dataset/NL2SparQL4NLU.train.utterances.txt'\n",
@@ -137,13 +181,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### 1.2. Corpus Descriptive Statistics (Counting)\n",
     "\n",
@@ -155,7 +207,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### Exercise\n",
     "\n",
@@ -173,29 +229,45 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### Exercise\n",
     "\n",
-    "- define a funtion to compute average token per utterance statistic\n"
+    "- define a function to compute average token per utterance statistic\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## 2. Lexicon\n",
     "\n",
@@ -208,14 +280,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### 2.1. Lexicon Size"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "#### Exercise\n",
     "\n",
@@ -233,13 +313,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### 2.2. Frequency List\n",
     "\n",
@@ -253,7 +341,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### Exercise\n",
     "\n",
@@ -274,7 +366,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [],
    "source": [
     "def nbest(d, n=1):\n",
@@ -290,13 +386,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### 2.3. Lexicon Operations\n",
     "\n",
@@ -309,14 +413,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "#### Exercises"
+    "### Exercises"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "##### Frequency Cut-Off\n",
     "\n",
@@ -345,13 +457,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "##### Stop Word Removal\n",
     "\n",
@@ -376,7 +496,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [],
    "source": [
     "swl='NL2SparQL4NLU/extras/english.stop.txt'"
@@ -385,35 +509,69 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "##### Exercise: Alternative Stop Words\n",
     "\n",
-    "- Compare the stop word list above to the stop word lists from the popular python libraries\n",
+    "Compare the stop word list above to the stop word lists from the popular python libraries in terms of overlaps.\n",
+    "(Use `set` `intersection`)\n",
     "\n",
-    "- scikit-learn\n",
-    "    - `from sklearn.feature_extraction.text import ENGLISH_STOP_WORDS`\n",
-    "    \n",
+    "- spaCy\n",
     "- NLTK\n",
+    "- scikit-learn\n",
+    "\n",
+    "    \n",
+    "For NLTK you need to download them first\n",
     "\n",
     "```python\n",
-    "\n",
     "import nltk\n",
     "nltk.download('stopwords')\n",
-    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "spaCy: 326\n",
+      "NLTK: 179\n",
+      "sklearn: 318\n"
+     ]
+    }
+   ],
+   "source": [
+    "from spacy.lang.en.stop_words import STOP_WORDS as SPACY_STOP_WORDS\n",
+    "from sklearn.feature_extraction.text import ENGLISH_STOP_WORDS as SKLEARN_STOP_WORDS\n",
     "from nltk.corpus import stopwords\n",
-    "STOP_WORDS = set(stopwords.words('english'))\n",
     "\n",
-    "```\n",
+    "NLTK_STOP_WORDS = set(stopwords.words('english'))\n",
     "\n",
-    "- spaCY\n",
-    "    - `from spacy.lang.en.stop_words import STOP_WORDS`"
+    "print('spaCy: {}'.format(len(SPACY_STOP_WORDS)))\n",
+    "print('NLTK: {}'.format(len(NLTK_STOP_WORDS)))\n",
+    "print('sklearn: {}'.format(len(SKLEARN_STOP_WORDS)))\n"
    ]
   },
   {
@@ -425,7 +583,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## 3. Basic Text Pre-processing\n",
     "\n",
@@ -439,29 +601,55 @@
     "    - documents to sentences (sentence segmentation/tokenization)\n",
     "    - sentences to tokens\n",
     "\n",
-    "- lowercasing/uppercasing\n",
-    "\n",
+    "- lowercasing/uppercasing\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "- removing punctuation\n",
     "\n",
-    "- removing accent marks and other diacritics\n",
+    "- removing accent marks and other diacritics \n",
     "\n",
     "- removing stop words (see above)\n",
     "\n",
-    "- removing sparse terms (frequency cut-off) \n",
-    "\n",
+    "- removing sparse terms (frequency cut-off)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "- number normalization\n",
     "    - numbers to words (i.e. `10` to `ten`)\n",
     "    - number words to numbers (i.e. `ten` to `10`)\n",
     "    - removing numbers\n",
-    "\n",
-    "\n",
     "\n",
     "- verbalization (specifically for speech applications)\n",
     "\n",
     "    - numbers to words\n",
     "    - expanding abbreviations (or spelling out)\n",
     "    - reading out dates, etc.\n",
-    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "- [lemmatization](https://en.wikipedia.org/wiki/Lemmatisation)\n",
     "    - the process of grouping together the inflected forms of a word so they can be analysed as a single item, identified by the word's lemma, or dictionary form.\n",
     "\n",
@@ -471,7 +659,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### 3.1. Tokenization and Lemmatization with spaCy\n",
     "\n",
@@ -484,7 +676,11 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -509,7 +705,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### Exercise\n",
     "\n",
@@ -521,13 +721,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### 3.2. Stemming with NLTK\n",
     "\n",
@@ -554,7 +762,11 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -579,13 +791,28 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### Exercise\n",
     "- Stem the dataset with NTLK\n",
     "- compute the lexicon of the training set of NL2SparQL4NLU dataset (or the one you have chosen)\n",
     "- compare its size to the \"raw\" and lemmatized counts"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
