--- a/solutions/ngram_modeling_solutions.ipynb
+++ b/solutions/ngram_modeling_solutions.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Statistical Language Modeling: Solutions\n",
     "\n",
-    "- Language Understanding Systems\n",
+    "- Natural Language Understanding\n",
     "- Evgeny A. Stepanov\n",
     "- stepanov.evgeny.a@gmail.com"
    ]
@@ -15,9 +15,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook is part of the Laboratory Work for [Language Understanding Systems class](http://disi.unitn.it/~riccardi/page7/page13/page13.html) of [University of Trento](https://www.unitn.it/en).\n",
-    "Laboratory has been ported to jupyer notebook format for remote teaching during [COVID-19 pandemic](https://en.wikipedia.org/wiki/2019%E2%80%9320_coronavirus_pandemic).\n",
-    "\n",
     "Dan Jurafsky and James H. Martin's __Speech and Language Processing__ ([3rd ed. draft](https://web.stanford.edu/~jurafsky/slp3/)) is advised for reading. "
    ]
   },
