--- a/solutions/corpus_solutions.ipynb
+++ b/solutions/corpus_solutions.ipynb
@@ -6,17 +6,9 @@
    "source": [
     "# Corpus Preprocessing using Python: Solutions\n",
     "\n",
-    "- Language Understanding Systems\n",
+    "- Natural Language Understanding\n",
     "- Evgeny A. Stepanov\n",
     "- stepanov.evgeny.a@gmail.com"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This notebook is part of the Laboratory Work for [Language Understanding Systems class](http://disi.unitn.it/~riccardi/page7/page13/page13.html) of [University of Trento](https://www.unitn.it/en).\n",
-    "Laboratory has been ported to jupyer notebook format for remote teaching during [COVID-19 pandemic](https://en.wikipedia.org/wiki/2019%E2%80%9320_coronavirus_pandemic)."
    ]
   },
   {
@@ -386,7 +378,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
