--- a/notebooks/wsd_nltk.ipynb
+++ b/notebooks/wsd_nltk.ipynb
@@ -616,7 +616,7 @@
      "output_type": "stream",
      "text": [
       "[[Synset('entity.n.01'), Synset('physical_entity.n.01'), Synset('object.n.01'), Synset('geological_formation.n.01'), Synset('slope.n.01'), Synset('bank.n.01')]]\n",
-      "{(Synset('entity.n.01'), 5), (Synset('slope.n.01'), 1), (Synset('geological_formation.n.01'), 2), (Synset('object.n.01'), 3), (Synset('bank.n.01'), 0), (Synset('physical_entity.n.01'), 4)}\n",
+      "{(Synset('object.n.01'), 3), (Synset('physical_entity.n.01'), 4), (Synset('bank.n.01'), 0), (Synset('slope.n.01'), 1), (Synset('entity.n.01'), 5), (Synset('geological_formation.n.01'), 2)}\n",
       "[Synset('entity.n.01')]\n",
       "5\n",
       "5\n"
@@ -1379,12 +1379,12 @@
      "output_type": "stream",
      "text": [
       "Acc: 0.257\n",
-      "interest.n.01  : p=0.137; r=0.083; f=0.137; s=219\n",
-      "interest.n.03  : p=0.003; r=0.091; f=0.003; s=298\n",
-      "pastime.n.01   : p=0.028; r=0.242; f=0.028; s=569\n",
-      "sake.n.01      : p=0.059; r=0.062; f=0.059; s=187\n",
-      "interest.n.05  : p=0.286; r=0.104; f=0.286; s=182\n",
-      "interest.n.04  : p=0.547; r=0.399; f=0.547; s=913\n"
+      "interest.n.01  : p=0.137; r=0.083; f=0.137; s=361\n",
+      "interest.n.03  : p=0.003; r=0.091; f=0.003; s=11\n",
+      "pastime.n.01   : p=0.028; r=0.242; f=0.028; s=66\n",
+      "sake.n.01      : p=0.059; r=0.062; f=0.059; s=178\n",
+      "interest.n.05  : p=0.286; r=0.104; f=0.286; s=500\n",
+      "interest.n.04  : p=0.547; r=0.399; f=0.547; s=1252\n"
      ]
     }
    ],
@@ -1421,7 +1421,7 @@
     "    r = recall(refs[cls], hyps[cls])\n",
     "    f = f_measure(refs[cls], hyps[cls], alpha=1)\n",
     "    \n",
-    "    print(\"{:15s}: p={:.3f}; r={:.3f}; f={:.3f}; s={}\".format(cls, p, r, f, len(hyps[cls])))"
+    "    print(\"{:15s}: p={:.3f}; r={:.3f}; f={:.3f}; s={}\".format(cls, p, r, f, len(refs[cls])))"
    ]
   },
   {
@@ -1528,7 +1528,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8124994424670609\n"
+      "0.8188401530762437\n"
      ]
     }
    ],
@@ -1643,7 +1643,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8560030686612965\n"
+      "0.8602242620494019\n"
      ]
     }
    ],
@@ -1714,7 +1714,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8978001980357\n"
+      "0.8935754364367845\n"
      ]
     }
    ],
